# python-cli-ddd

./: .env.example  .gitignore  .importlinter  Makefile  README.ja.md  README.md  pyproject.toml  tasks.db
.cursor/rules/: claude-sonnet-37-best-practices.mdc
.github/workflows/: ci.yml
src/python_cli_ddd/application/usecases/message/: print_message_usecase.py
src/python_cli_ddd/application/usecases/task/: list_tasks_usecase.py
src/python_cli_ddd/core/config/: interfaces.py  settings.py
src/python_cli_ddd/core/di/: container.py  interfaces.py
src/python_cli_ddd/core/logging/: interfaces.py  logger.py
src/python_cli_ddd/domain/models/: message.py  task.py
src/python_cli_ddd/domain/repositories/: task_repository.py
src/python_cli_ddd/infrastructure/config/: settings.py
src/python_cli_ddd/infrastructure/database/: initialize.py  models.py  settings.py
src/python_cli_ddd/infrastructure/di/: container.py
src/python_cli_ddd/infrastructure/logging/: handlers.py  logger.py
src/python_cli_ddd/infrastructure/repositories/: sqlite_task_repository.py
src/python_cli_ddd/interface/cli/: list_tasks_command.py  print_message_command.py
src/python_cli_ddd/scripts/: add_sample_tasks.py
